@@ -1,6 +1,6 @@
 2010-08-01  Jeremy Bennett  <jeremy.bennett@embecosm.com>
 
-	* extern.h, os.h: Removed $Id$.
+	* extern.h, os.h: Removed (dollar) Id.
 
 2009-08-22  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
